--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <meta charset="utf-8" />
-    <title>PicHub</title>
+    <title>WebApp</title>
     <base href="/" />
     <link
       rel="stylesheet"
